# cool-japan.._..oximedia

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  audit.toml
benches/: Cargo.toml  TODO.md  compat_ffmpeg_bench.rs  cv_bench.rs
crates/oximedia-360/: Cargo.toml  README.md  TODO.md
crates/oximedia-360/benches/: cubemap_bench.rs
crates/oximedia-360/src/: fisheye.rs  gaze_tracker.rs  lib.rs  mesh_warp.rs  pixel_format.rs  projection.rs  pyramid_blend.rs  rectilinear.rs  seam_blending.rs  spatial_audio_360.rs  stereo.rs  stitching_quality.rs  tile_selector.rs  viewport_predictor.rs  vr180.rs
crates/oximedia-aaf/: Cargo.toml  README.md  TODO.md
crates/oximedia-aaf/src/: aaf_export.rs  avid_bin.rs  convert.rs  dictionary.rs  edit_session.rs  effect_def.rs  effects.rs  essence.rs  interchange.rs  lazy_essence.rs  lib.rs  media_file_ref.rs  metadata.rs  operation_group.rs  parameter.rs  property_value.rs  relink.rs  scope.rs  selector.rs  streaming.rs  timeline.rs  track_group.rs
crates/oximedia-access/: Cargo.toml  README.md
crates/oximedia-access/src/: accessibility_report.rs  adaptive_font.rs  audio_description_meta.rs  audio_profile.rs  auto_alt_text.rs  caption_collision.rs  chapter_navigator.rs  color_blind_sim.rs  focus_manager.rs  haptic.rs  navigation_landmark.rs  parallel_compliance.rs  precomputed_filter.rs  rbac.rs  screen_reader.rs  session_manager.rs  sign_language_metadata.rs  text_to_speech_hints.rs  token.rs  user_group.rs  wcag_checker.rs
crates/oximedia-access/tests/: integration_test.rs
crates/oximedia-align/: Cargo.toml  README.md
crates/oximedia-align/src/: audio_align.rs  beat_align.rs  color.rs  confidence_map.rs  elastic_align.rs  features.rs  frame_matcher.rs  frequency_align.rs  integral_image.rs  markers.rs  motion_compensate.rs  motion_interp.rs  multi_stream.rs  multicam_sync.rs  multitrack_align.rs  projective_warp.rs  rigid_transform.rs  subframe_interp.rs  tempo_align.rs  temporal_align.rs  warp.rs
crates/oximedia-analysis/: Cargo.toml  README.md
crates/oximedia-analysis/benches/: analysis_benchmarks.rs
crates/oximedia-analysis/examples/: batch_processing.rs
crates/oximedia-analysis/src/: audio.rs  bitrate_recommender.rs  black.rs  brand_detection.rs  color.rs  commercial_detect.rs  complexity_metrics.rs  composition_analyzer.rs  content.rs  edge_density.rs  frequency_analysis.rs  frozen_frame.rs  gamut_analyzer.rs  motion.rs  multi_pass.rs  noise_profile.rs  quality.rs  report.rs  scene.rs  scene_stats.rs  shot_composition.rs  temporal.rs  temporal_stats.rs  thumbnail.rs  vmaf_estimator.rs
crates/oximedia-analysis/tests/: integration_tests.rs  module_tests.rs
crates/oximedia-analytics/: Cargo.toml  README.md  TODO.md
crates/oximedia-analytics/src/: anomaly.rs  ctr.rs  engagement.rs  error.rs  event_buffer.rs  fingerprint.rs  geo_device.rs  heatmap.rs  lib.rs  multivariate.rs  percentile.rs  recommendation.rs  replay.rs  segment_retention.rs  session.rs  uniformity.rs  weighted_retention.rs
crates/oximedia-archive/: Cargo.toml  README.md  TODO.md
crates/oximedia-archive-pro/: Cargo.toml  README.md
crates/oximedia-archive-pro/src/: archive_extensions.rs  audit_trail.rs  collection_manifest.rs  cost_estimator.rs  deaccession.rs  disaster_recovery.rs  format_migration.rs  iiif_manifest.rs  ingest.rs  integrity_dashboard.rs  lockss_package.rs  metadata_crosswalk.rs  migration_plan.rs  oais_model.rs  provenance_chain.rs  replication_verify.rs  restore_workflow.rs  retention.rs  secure_delete.rs  sip_builder.rs  storage_quota.rs  workflow_state.rs
crates/oximedia-archive/src/: bagit_profile.rs  batch_archive.rs  (+27 more)
crates/oximedia-audio/: Cargo.toml  README.md  TODO.md
crates/oximedia-audio-analysis/: Cargo.toml  README.md
crates/oximedia-audiopost/: Cargo.toml  README.md
crates/oximedia-auto/: Cargo.toml  README.md  TODO.md
crates/oximedia-batch/: Cargo.toml  README.md  TODO.md
crates/oximedia-bench/: Cargo.toml  README.md
crates/oximedia-bitstream/: Cargo.toml  README.md  TODO.md
crates/oximedia-cache/: Cargo.toml  README.md
crates/oximedia-calibrate/: Cargo.toml  README.md
crates/oximedia-caption-gen/: Cargo.toml  README.md  TODO.md
crates/oximedia-captions/: Cargo.toml  README.md
crates/oximedia-cdn/: Cargo.toml  README.md
crates/oximedia-clips/: Cargo.toml  README.md
crates/oximedia-cloud/: Cargo.toml  README.md
crates/oximedia-collab/: Cargo.toml  README.md  TODO.md
crates/oximedia-colormgmt/: Cargo.toml  README.md
crates/oximedia-compat-ffmpeg/: Cargo.toml  README.md  TODO.md
crates/oximedia-conform/: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: flac_parser.rs  matroska_parser.rs  mp4_parser.rs  ogg_parser.rs  wav_parser.rs
oximedia-cli/: Cargo.toml  README.md  TODO.md  build.rs
oximedia-cli/src/: aaf_cmd.rs  access_cmd.rs  align_cmd.rs  analyze.rs  archive_cmd.rs  archivepro_cmd.rs  audio_cmd.rs  audiopost_cmd.rs  auto_cmd.rs  batch.rs  batch_cmd.rs  benchmark.rs  calibrate_cmd.rs  captions_cmd.rs  clips_cmd.rs  cloud_cmd.rs  collab_cmd.rs  color_cmd.rs  commands.rs  concat.rs  conform_cmd.rs  dedup_cmd.rs  denoise_cmd.rs  distributed_cmd.rs  dolbyvision_cmd.rs  drm_cmd.rs  edl_cmd.rs  extract.rs  farm_cmd.rs  ffcompat_cmd.rs  filter_cmd.rs  forensics_cmd.rs  frame_extract.rs  gaming_cmd.rs  graphics_cmd.rs  handlers.rs  image_cmd.rs  imf_cmd.rs  lib.rs  loudness_cmd.rs  (+47 more)
oximedia-wasm/: Cargo.toml  README.md  TODO.md
oximedia-wasm/src/: aaf_wasm.rs  access_wasm.rs  align_wasm.rs  analysis.rs  archivepro_wasm.rs  audio_decoder.rs  audiopost_wasm.rs  auto_wasm.rs  av1_decoder.rs  batch_wasm.rs  calibrate_wasm.rs  captions_wasm.rs  clips_wasm.rs  collab_wasm.rs  colormgmt_wasm.rs  conform_wasm.rs  convert.rs  convert_wasm.rs  dedup_wasm.rs  demuxer.rs  denoise_wasm.rs  dolbyvision_wasm.rs  drm_wasm.rs  filter_graph.rs  forensics_wasm.rs  gaming_wasm.rs  graphics_wasm.rs  hdr_wasm.rs  image_wasm.rs  imf_wasm.rs  io.rs  lib.rs  lut_wasm.rs  media_player.rs  metadata_wasm.rs  mir_wasm.rs  mixer_wasm.rs  monitor_wasm.rs  multicam_wasm.rs  muxer.rs  (+35 more)
(+3482 files in other folders)
