[package]
name = "oximedia-benchmarks"
description = "Benchmarks for OxiMedia ecosystem"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[[bench]]
name = "container_bench"
path = "container_bench.rs"
harness = false

[[bench]]
name = "codec_bench"
path = "codec_bench.rs"
harness = false

[[bench]]
name = "audio_bench"
path = "audio_bench.rs"
harness = false

[[bench]]
name = "cv_bench"
path = "cv_bench.rs"
harness = false

[[bench]]
name = "graph_bench"
path = "graph_bench.rs"
harness = false

[[bench]]
name = "io_bench"
path = "io_bench.rs"
harness = false

[[bench]]
name = "compat_ffmpeg_bench"
path = "compat_ffmpeg_bench.rs"
harness = false

[dependencies]
oximedia-core = { workspace = true }
oximedia-io = { workspace = true }
oximedia-container = { workspace = true }
oximedia-codec = { workspace = true, default-features = true, features = ["av1", "vp8", "vp9"], optional = true }
oximedia-audio = { workspace = true }
oximedia-graph = { workspace = true }
oximedia-cv = { workspace = true, optional = true }
oximedia-compat-ffmpeg = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { workspace = true, features = ["rt", "macros"] }
bytes = { workspace = true }

[features]
default = []
codec = ["dep:oximedia-codec"]
cv = ["dep:oximedia-cv"]
