[package]
name = "oximedia-fuzz"
version = "0.0.0"
publish = false
edition.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bytes = "1"
tokio = { version = "1", features = ["rt"] }

# Workspace crates
oximedia-core = { path = "../crates/oximedia-core" }
oximedia-io = { path = "../crates/oximedia-io" }
oximedia-container = { path = "../crates/oximedia-container" }
oximedia-codec = { path = "../crates/oximedia-codec", features = ["av1", "vp9", "vp8", "theora"] }
oximedia-audio = { path = "../crates/oximedia-audio", features = ["opus", "vorbis", "flac"] }
oximedia-net = { path = "../crates/oximedia-net" }

# Prevent this from activating dev-dependencies of the crates above
[profile.release]
debug = 1

# ============================================================================
# Container Parser Targets
# ============================================================================

[[bin]]
name = "matroska_parser"
path = "fuzz_targets/matroska_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ogg_parser"
path = "fuzz_targets/ogg_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "flac_parser"
path = "fuzz_targets/flac_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mp4_parser"
path = "fuzz_targets/mp4_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "wav_parser"
path = "fuzz_targets/wav_parser.rs"
test = false
doc = false
bench = false

# ============================================================================
# Video Codec Targets
# ============================================================================

[[bin]]
name = "av1_decoder"
path = "fuzz_targets/av1_decoder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "vp9_decoder"
path = "fuzz_targets/vp9_decoder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "vp8_decoder"
path = "fuzz_targets/vp8_decoder.rs"
test = false
doc = false
bench = false

# ============================================================================
# Audio Codec Targets
# ============================================================================

[[bin]]
name = "opus_decoder"
path = "fuzz_targets/opus_decoder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "vorbis_decoder"
path = "fuzz_targets/vorbis_decoder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "flac_decoder"
path = "fuzz_targets/flac_decoder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "theora_decoder"
path = "fuzz_targets/theora_decoder.rs"
test = false
doc = false
bench = false

# ============================================================================
# Parser Targets
# ============================================================================

[[bin]]
name = "ebml_parser"
path = "fuzz_targets/ebml_parser.rs"
test = false
doc = false
bench = false

# ============================================================================
# Network Protocol Targets
# ============================================================================

[[bin]]
name = "hls_parser"
path = "fuzz_targets/hls_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dash_parser"
path = "fuzz_targets/dash_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rtmp_parser"
path = "fuzz_targets/rtmp_parser.rs"
test = false
doc = false
bench = false
