[package]
name = "oximedia-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Command-line interface for OxiMedia"

[lints]
workspace = true

[[bin]]
name = "oximedia"
path = "src/main.rs"

[[bin]]
name = "oximedia-ff"
path = "src/bin/oximedia-ff.rs"

[dependencies]
oximedia-compat-ffmpeg.workspace = true
oximedia-plugin.workspace = true
oximedia-mir.workspace = true
oximedia-core.workspace = true
oximedia-distributed.workspace = true
oximedia-farm.workspace = true
oximedia-renderfarm.workspace = true
oximedia-access.workspace = true
oximedia-rights.workspace = true
oximedia-auto.workspace = true
oximedia-transcode.workspace = true
oximedia-io.workspace = true
oximedia-container.workspace = true
oximedia-codec = { workspace = true, default-features = true, features = ["av1", "vp9", "vp8"] }
oximedia-graph.workspace = true
oximedia-quality.workspace = true
oximedia-scene.workspace = true
oximedia-shots.workspace = true
oximedia-audio-analysis.workspace = true
oximedia-metering.workspace = true
oximedia-normalize.workspace = true
oximedia-subtitle.workspace = true
oximedia-lut.workspace = true
oximedia-denoise.workspace = true
oximedia-scopes.workspace = true
oximedia-stabilize.workspace = true
oximedia-graphics.workspace = true
oximedia-multicam.workspace = true
oximedia-edl.workspace = true
oximedia-packager.workspace = true
oximedia-forensics.workspace = true
oximedia-monitor.workspace = true
oximedia-restore.workspace = true
oximedia-captions.workspace = true
oximedia-timecode.workspace = true
oximedia-search.workspace = true
oximedia-repair.workspace = true
oximedia-colormgmt.workspace = true
oximedia-playlist.workspace = true
oximedia-conform.workspace = true
oximedia-archive.workspace = true
oximedia-watermark.workspace = true
oximedia-image.workspace = true
oximedia-imf.workspace = true
oximedia-qc.workspace = true
oximedia-aaf.workspace = true
oximedia-mixer.workspace = true
oximedia-audiopost.workspace = true
oximedia-gaming.workspace = true
oximedia-virtual.workspace = true
oximedia-profiler.workspace = true
oximedia-recommend.workspace = true
oximedia-scaling.workspace = true
oximedia-playout.workspace = true
oximedia-switcher.workspace = true
oximedia-workflow.workspace = true
oximedia-ndi.workspace = true
oximedia-videoip.workspace = true
oximedia-drm.workspace = true
oximedia-dedup.workspace = true
oximedia-archive-pro.workspace = true
oximedia-dolbyvision.workspace = true
uuid = { workspace = true }
tokio.workspace = true
clap.workspace = true
ratatui.workspace = true
crossterm = "0.29"
indicatif = "0.18"
anyhow = "1"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
colored = "2"
rayon = "1.10"
chrono = "0.4"
humantime = "2"
dirs = "6"

[dev-dependencies]
tempfile = "3"
