[package]
name = "oximedia-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Command-line interface for OxiMedia"
readme = "README.md"

[lints]
workspace = true

[[bin]]
name = "oximedia"
path = "src/main.rs"

[[bin]]
name = "oximedia-ff"
path = "src/bin/oximedia-ff.rs"

[dependencies]
oximedia-compat-ffmpeg.workspace = true
oximedia-plugin.workspace = true
oximedia-mir.workspace = true
oximedia-core.workspace = true
oximedia-distributed.workspace = true
oximedia-farm.workspace = true
oximedia-renderfarm.workspace = true
oximedia-access.workspace = true
oximedia-rights.workspace = true
oximedia-auto.workspace = true
oximedia-transcode.workspace = true
oximedia-io.workspace = true
oximedia-container.workspace = true
oximedia-codec = { workspace = true, default-features = true, features = ["av1", "vp9", "vp8"] }
oximedia-graph.workspace = true
oximedia-quality.workspace = true
oximedia-scene.workspace = true
oximedia-shots.workspace = true
oximedia-audio-analysis.workspace = true
oximedia-metering.workspace = true
oximedia-normalize.workspace = true
oximedia-subtitle.workspace = true
oximedia-lut.workspace = true
oximedia-denoise.workspace = true
oximedia-scopes.workspace = true
oximedia-stabilize.workspace = true
oximedia-graphics.workspace = true
oximedia-multicam.workspace = true
oximedia-edl.workspace = true
oximedia-packager.workspace = true
oximedia-forensics.workspace = true
oximedia-monitor.workspace = true
oximedia-restore.workspace = true
oximedia-captions.workspace = true
oximedia-timecode.workspace = true
oximedia-search.workspace = true
oximedia-repair.workspace = true
oximedia-colormgmt.workspace = true
oximedia-playlist.workspace = true
oximedia-conform.workspace = true
oximedia-archive.workspace = true
oximedia-watermark.workspace = true
oximedia-image.workspace = true
oximedia-imf.workspace = true
oximedia-qc = { workspace = true, features = ["database"] }
oximedia-aaf.workspace = true
oximedia-mixer.workspace = true
oximedia-audiopost.workspace = true
oximedia-gaming.workspace = true
oximedia-virtual.workspace = true
oximedia-profiler.workspace = true
oximedia-recommend.workspace = true
oximedia-scaling.workspace = true
oximedia-playout.workspace = true
oximedia-switcher.workspace = true
oximedia-workflow = { workspace = true, features = ["sqlite"] }
oximedia-ndi.workspace = true
oximedia-videoip.workspace = true
oximedia-drm.workspace = true
oximedia-dedup.workspace = true
oximedia-batch = { workspace = true, features = ["sqlite"] }
oximedia-archive-pro.workspace = true
oximedia-dolbyvision.workspace = true
oximedia-ml = { workspace = true, optional = true }
uuid = { workspace = true }
tokio.workspace = true
clap.workspace = true
ratatui.workspace = true
crossterm = "0.29"
indicatif = "0.18"
anyhow = "1"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
colored = "3"
rayon.workspace = true
chrono.workspace = true
humantime = "2"
dirs = "6"

[features]
default = []
# Enable the `oximedia ml ...` subcommand family.
#
# Without this feature, the `ml` subcommand is still wired into the clap
# dispatcher so users get a friendly "--features ml" error message rather
# than `clap` treating the verb as unknown. Turning this on pulls in the
# Pure-Rust `oximedia-ml` crate (with serde, for --json output).
ml = ["dep:oximedia-ml", "oximedia-ml/serde"]
# Enable every built-in pipeline in the `ml` command surface.
ml-all-pipelines = ["ml", "oximedia-ml/all-pipelines"]

[dev-dependencies]
tempfile.workspace = true
assert_cmd = "2"
predicates = "3"
