[package]
name = "oximedia-access"
description = "Media accessibility tools including closed captions, audio description, and compliance"
keywords = ["accessibility", "captions", "audio-description", "multimedia", "video"]
categories = ["multimedia"]
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
oximedia-core = { workspace = true }
oximedia-audio = { workspace = true }
oximedia-subtitle = { workspace = true }
oximedia-graph = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
