[package]
name = "oximedia-analytics"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Media engagement analytics — viewer behavior, A/B testing, retention curves, and engagement scoring for OxiMedia"
readme = "README.md"
keywords = ["analytics", "engagement", "multimedia", "metrics", "viewership"]
categories = ["multimedia", "web-programming", "data-structures"]

[lints]
workspace = true

[features]
default = []

[dependencies]
thiserror.workspace = true
uuid.workspace = true
rayon.workspace = true

[dev-dependencies]
