[package]
name = "oximedia-archive-pro"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Professional archive and digital preservation system for OxiMedia"
keywords = ["archive", "preservation", "digital", "multimedia", "video"]
categories = ["multimedia", "filesystem"]
readme = "README.md"

[lints]
workspace = true

[dependencies]
oximedia-core = { workspace = true }
oximedia-archive = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
rayon = { workspace = true }
quick-xml = "0.39"
oxiarc-archive = { workspace = true }
sha2 = { workspace = true }
md-5 = "0.11"
xxhash-rust = { workspace = true, features = ["xxh3"] }
chrono = { workspace = true }
serde_json = { workspace = true }
walkdir = "2.5"
hex = "0.4"
blake3 = "1.8"

[dev-dependencies]
tempfile.workspace = true
