[package]
name = "oximedia-archive"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Media archive verification and long-term preservation system"
keywords = ["archive", "preservation", "verification", "multimedia", "video"]
categories = ["multimedia", "filesystem"]
readme = "README.md"
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
sqlite = ["sqlx"]

[dependencies]
blake3 = "1.8"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["chrono"], optional = true }
chrono = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = "1.0"
tracing = { workspace = true }
hex = "0.4"
sha2 = { workspace = true }
sha1 = { workspace = true }
xxhash-rust = { workspace = true }
md-5 = "0.11"
crc32fast = "1.5"
rayon = { workspace = true }
async-trait = { workspace = true }
regex = "1.12"
csv = "1.4"
