[package]
name = "oximedia-audio"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Audio codec implementations for OxiMedia"

[lints]
workspace = true

[features]
default = ["opus", "vorbis", "flac", "mp3"]
opus = []
vorbis = []
flac = []
mp3 = []
pcm = []

[dependencies]
oximedia-core.workspace = true
bytes.workspace = true
thiserror.workspace = true
rubato = "2.0"
audioadapter = "3.0"
audioadapter-buffers = "3.0"
oxifft.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
