[package]
name = "oximedia-batch"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Comprehensive batch processing engine for OxiMedia"
keywords = ["batch", "workflow", "processing", "multimedia", "pipeline"]
categories = ["multimedia", "algorithms"]
readme = "README.md"

[lints]
workspace = true

[features]
default = []
scripting = ["mlua"]
sqlite = ["rusqlite", "r2d2", "r2d2_sqlite"]

[dependencies]
oximedia-core = { workspace = true }
oximedia-transcode = { workspace = true }
oximedia-qc = { workspace = true }
oximedia-workflow = { workspace = true }
oximedia-monitor = { workspace = true }
oximedia-metadata = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
regex = "1.12"
glob = "0.3"
prometheus = { workspace = true }
oxiarc-deflate = { workspace = true }
oxiarc-archive = { workspace = true }
walkdir = "2.5"
sha2 = { workspace = true }
hex = "0.4"
num_cpus = "1.17"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
oximedia-farm = { workspace = true }
hostname = "0.4"
tokio = { workspace = true }
rusqlite = { workspace = true, optional = true }
r2d2 = { workspace = true, optional = true }
r2d2_sqlite = { workspace = true, optional = true }
notify = "8.2"
mlua = { version = "0.11", features = ["lua54", "vendored", "async", "serialize"], optional = true }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
