[package]
name = "oximedia-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Comprehensive codec benchmarking suite for OxiMedia"

[lints]
workspace = true

[features]
default = ["vmaf"]
vmaf = []

[dependencies]
oximedia-core.workspace = true
oximedia-codec = { workspace = true, default-features = true }
oximedia-graph.workspace = true
thiserror.workspace = true
tokio.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
csv = "1"
statistical = "1.0"
rayon.workspace = true
bytes.workspace = true

[dev-dependencies]
tempfile = "3"
