[package]
name = "oximedia-bitstream"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Bitstream I/O for OxiMedia — derived from bitstream-io 4.9.0, std-only (no core2 dependency)"
keywords = ["bitstream", "io", "encoding", "multimedia", "codec"]
categories = ["multimedia::encoding", "multimedia"]
readme = "README.md"
autoexamples = false
autotests = false
autobenches = false

[lints]
workspace = true

[lib]
name = "oximedia_bitstream"
path = "src/lib.rs"
doctest = false

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[[test]]
name = "write"
path = "tests/write.rs"

[[test]]
name = "read"
path = "tests/read.rs"

[[test]]
name = "huffman"
path = "tests/huffman.rs"

[[test]]
name = "roundtrip"
path = "tests/roundtrip.rs"

[[test]]
name = "read_seek"
path = "tests/read_seek.rs"
