[package]
name = "oximedia-cache"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
description = "High-performance caching infrastructure for OxiMedia: LRU, tiered multi-level, and predictive cache warming"
readme = "README.md"
keywords = ["cache", "lru", "tiered", "multimedia", "performance"]
categories = ["caching", "multimedia", "memory-management"]

[lints]
workspace = true

[features]
default = []

[dependencies]
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
