[package]
name = "oximedia-calibrate"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Professional color calibration and matching tools for OxiMedia"
keywords = ["color", "calibration", "grading", "video", "multimedia"]
categories = ["multimedia::video", "multimedia"]
readme = "README.md"

[lints]
workspace = true

[dependencies]
oximedia-core = { workspace = true }
oximedia-lut = { workspace = true }
oximedia-cv = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
